--- a/main.html
+++ b/main.html
@@ -8,6 +8,46 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<div>
+			<label for="name">Name</label>
+            <input type="text" id="name">
+		</div>
+		<div>
+			<label for="email">Email</label>
+            <input type="email" id="email">
+		</div>
+		<div>
+			<label for="male">Male</label>
+            <input type="radio" id="male" name="gender">
+
+			<label for="female">Female</label>
+            <input type="radio" id="female" name="gender">
+
+			<label for="other">Other</label>
+            <input type="radio" id="other" name="gender">
+		</div>
+		<div>
+			<label for="email">Laptop Brands</label>
+            <input type="email" id="email">
+		</div>
+		<div>
+			<label for="age">Age</label>
+            <input type="age" id="age">
+		</div>
+		<div>
+			<label for="dob">Date of Birth</label>
+            <input type="date" id="dob">
+		</div>
+		<div>
+			<label for="password">Password</label>
+            <input type="password" id="password">
+		</div>
+		<div>
+            <input type="submit" value="Submit">
+		</div>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
