--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
 	<form>
 		<div>
-			<label for="name">Name</label>
-            <input type="text" id="name">
+			<label for="name">Name*</label>
+            <input type="text" id="name" required>
 		</div>
 		<div>
-			<label for="email">Email</label>
-            <input type="email" id="email">
+			<label for="email">Email*</label>
+            <input type="email" id="email" required>
 		</div>
 		<div>
 			<label for="male">Male</label>
