--- a/main.html
+++ b/main.html
@@ -18,6 +18,7 @@
             <input type="email" id="email" required>
 		</div>
 		<div>
+			<label>Gender: 
 			<label for="male">Male</label>
             <input type="radio" id="male" name="gender">
 
@@ -26,31 +27,36 @@
 
 			<label for="other">Other</label>
             <input type="radio" id="other" name="gender">
+			</label>
 		</div>
 		<div>
-			<label for="email">Laptop Brands</label>
-            <input type="email" id="email">
+			<label>Laptop Brands: 
+			<label for="laptop">Apple</label>
+            <input type="radio" id="laptop" >
+
+			<label for="laptop">Asus</label>
+            <input type="radio" id="laptop" >
+
+			<label for="laptop">HP</label>
+            <input type="radio" id="laptop" >
+			</label>
 		</div>
 		<div>
-			<label for="age">Age</label>
-            <input type="age" id="age">
+			<label for="age">Age*</label>
+            <input type="age" id="age" required>
 		</div>
 		<div>
-			<label for="dob">Date of Birth</label>
-            <input type="date" id="dob">
+			<label for="dob">Date of Birth*</label>
+            <input type="date" id="dob" required>
 		</div>
 		<div>
-			<label for="password">Password</label>
-            <input type="password" id="password">
+			<label for="password">Password*</label>
+            <input type="password" id="password" required>
 		</div>
 		<div>
             <input type="submit" value="Submit">
 		</div>
-		
 	</form>
-    <script type="text/javascript" src="./script.js">
-</script>
-
 </body>
 
 </html>
