--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 		</div>
 		<div>
 			<label for="age">Age*</label>
-            <input type="age" id="age" required>
+            <input type="number" id="age" required>
 		</div>
 		<div>
 			<label for="dob">Date of Birth*</label>
@@ -52,6 +52,9 @@
 		<div>
 			<label for="password">Password*</label>
             <input type="password" id="password" required>
+		</div>
+		<div>
+			<input type="url" placeholder="Portfolio URL" id="portfolio">
 		</div>
 		<div>
             <input type="submit" value="Submit">
