--- a/main.html
+++ b/main.html
@@ -54,7 +54,8 @@
             <input type="password" id="password" required>
 		</div>
 		<div>
-			<input type="url" placeholder="Portfolio URL" id="portfolio">
+			<label>Portfolio*</label>
+			<input type="url" placeholder="URL" id="portfolio" required>
 		</div>
 		<div>
             <input type="submit" value="Submit">
