--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="get">
 		<div>
 			<label for="name">Name*</label>
             <input type="text" id="name" required>
@@ -54,7 +54,7 @@
             <input type="password" id="password" required>
 		</div>
 		<div>
-			<label>Portfolio*</label>
+			<label for="portfolio">Portfolio*</label>
 			<input type="url" placeholder="URL" id="portfolio" required>
 		</div>
 		<div>
