--- a/main.html
+++ b/main.html
@@ -19,13 +19,13 @@
 		</div>
 		<div>
 			<label>Gender: 
-			<label for="male">Male</label>
+			<label for="gender">Male</label>
             <input type="radio" id="male" name="gender">
 
-			<label for="female">Female</label>
+			<label for="gender">Female</label>
             <input type="radio" id="female" name="gender">
 
-			<label for="other">Other</label>
+			<label for="gender">Other</label>
             <input type="radio" id="other" name="gender">
 			</label>
 		</div>
