--- a/main.html
+++ b/main.html
@@ -11,54 +11,49 @@
 	<form method="get">
 		<div>
 			<label for="name">Name*</label>
-            <input type="text" id="name" required>
+            <input type="text" required id="name">
 		</div>
 		<div>
 			<label for="email">Email*</label>
-            <input type="email" id="email" required>
+            <input type="email" required id="email">
 		</div>
 		<div>
-			<label>Gender: 
+			<label for="gender">Gender:</label>
 			<label for="gender">Male</label>
-            <input type="radio" id="male" name="gender">
+            <input type="radio" name="gender" required id="gender">
 
 			<label for="gender">Female</label>
-            <input type="radio" id="female" name="gender">
+            <input type="radio" name="gender" required id="gender">
 
 			<label for="gender">Other</label>
-            <input type="radio" id="other" name="gender">
-			</label>
+            <input type="radio" name="gender" required id="gender">
 		</div>
 		<div>
-			<label>Laptop Brands: 
-			<label for="laptop">Apple</label>
-            <input type="radio" id="laptop" >
-
-			<label for="laptop">Asus</label>
-            <input type="radio" id="laptop" >
-
-			<label for="laptop">HP</label>
-            <input type="radio" id="laptop" >
-			</label>
+			<label for="laptop">Laptop Brands:</label>
+			<select id="laptop">
+				<option value="apple">Apple</option>
+				<option value="asus">Asus</option>
+				<option value="hp">HP</option>
+			</select>
 		</div>
 		<div>
 			<label for="age">Age*</label>
-            <input type="number" id="age" required>
+            <input type="number" required id="age">
 		</div>
 		<div>
-			<label for="dob">Date of Birth*</label>
-            <input type="date" id="dob" required>
+			<label for="dob">DOB*</label>
+            <input type="date" required id="dob">
 		</div>
 		<div>
 			<label for="password">Password*</label>
-            <input type="password" id="password" required>
+            <input type="password" required id="password">
 		</div>
 		<div>
 			<label for="portfolio">Portfolio*</label>
-			<input type="url" placeholder="URL" id="portfolio" required>
+			<input type="url" required id="portfolio">
 		</div>
 		<div>
-            <input type="submit" value="Submit">
+            <button type="submit">Submit</button>
 		</div>
 	</form>
 </body>
