--- a/main.html
+++ b/main.html
@@ -19,14 +19,8 @@
 		</div>
 		<div>
 			<label for="gender">Gender:</label>
-			<label for="gender">Male</label>
-            <input type="radio" name="gender" required id="gender">
-
-			<label for="gender">Female</label>
-            <input type="radio" name="gender" required id="gender">
-
-			<label for="gender">Other</label>
-            <input type="radio" name="gender" required id="gender">
+            <input type="radio" name="gender" required id="gender">Male
+            <input type="radio" name="gender" required id="gender">Female
 		</div>
 		<div>
 			<label for="laptop">Laptop Brands:</label>
