--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form method="form">
+	<form method="post">
+		
 		<div>
 			<label for="name">Name*</label>
             <input type="text" required id="name">
